# gcmprocpy

./: .gitignore  .readthedocs.yaml  LICENSE  README.md
.github/workflows/: ci.yml
docs/: README.md  requirements.txt
docs/source/: conf.py  index.rst
docs/source/gcmprocpy/: data_functions.rst  file_structure.rst  index.rst  input_generation.rst  installation.rst  movie_functions.rst  plot_functions.rst  postproc_functions.rst  requirements.rst  usage.rst
docs/source/gcmprocpy/notebooks/: 01_data_exploration.ipynb  02_data_extraction.ipynb  04_emissions.ipynb
docs/source/tiegcmpy/: data_functions.rst  file_structure.rst  index.rst  installation.rst  movie_functions.rst  plot_functions.rst  postproc_functions.rst  usage.rst
gcmprocpy/: pyproject.toml  requirements.txt  setup.py
gcmprocpy/src/gcmprocpy/: __init__.py  containers.py  convert_units.py  data_density.py  data_diff.py  data_emissions.py  data_epflux.py  data_oh.py  data_parse.py  getoptions.py  io.py  main.py  mov_gen.py  plot_gen.py
gcmprocpy/src/gcmprocpy/cmd/: cmd_lat_lon.py  cmd_lat_time.py  cmd_lev_lat.py  cmd_lev_lon.py  cmd_lev_time.py  cmd_lev_var.py  cmd_lon_time.py  cmd_sat_track.py  cmd_var_lat.py  cmd_var_lon.py  cmd_var_time.py
gcmprocpy/src/gcmprocpy/gpigen/: __init__.py  cli.py  core.py  dataset.py  dates.py  plotting.py  processing.py  sources.py
gcmprocpy/src/gcmprocpy/gui/: gcmprocpy.py
gcmprocpy/src/gcmprocpy/imfgen/: __init__.py  cli.py  core.py  dataset.py  dates.py  processing.py  sources.py
gcmprocpy/tests/: conftest.py  test_cache.py  test_cmd.py  test_containers.py  test_convert_units.py  test_cross_section_overlays.py  test_data_density.py  test_data_parse.py  test_emissions.py  test_epflux.py  test_gcmprocpy.ipynb  test_height.py  test_io.py  test_main.py  test_oh.py  test_plt_var_lat_lon.py  test_polar_ring_labels.py
gcmprocpy/tests/gpigen/: conftest.py  test_cli.py  test_core.py  test_dataset.py  test_dates.py  test_live.py  test_processing.py  test_sources.py
gcmprocpy/tests/imfgen/: conftest.py  test_cli.py  test_core.py  test_dataset.py  test_dates.py  test_download.py  test_golden.py  test_live.py  test_processing.py  test_sources.py
tiegcmpy/: requirements.txt  setup.py
tiegcmpy/src/tiegcmpy/: data_emissions.py  mov_gen.py
tiegcmpy/src/tiegcmpy/cmd/: cmd_lat_lon.py  cmd_lat_time.py  cmd_lev_lat.py  cmd_lev_lon.py  cmd_lev_time.py  cmd_lev_var.py
