[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "gcmprocpy"
version = "1.2.1"
description = "A Python3 post processing tool for TIE-GCM and WACCM-X"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.8"
authors = [
    { name = "Nikhil Rao", email = "nikhilr@ucar.edu" },
]
keywords = ["TIE-GCM", "WACCM-X", "atmospheric-science", "post-processing", "visualization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "cartopy",
    "matplotlib",
    "numpy",
    "xarray",
    "ipython",
    "geomag",
    "netcdf4",
    "ipympl",
    "mplcursors",
    "PyQt5",
]

[project.urls]
Homepage = "https://github.com/NCAR/gcmprocpy"
Documentation = "https://gcmprocpy.readthedocs.io"

[project.scripts]
lat_lon = "gcmprocpy.cmd.cmd_lat_lon:cmd_plt_lat_lon"
lev_var = "gcmprocpy.cmd.cmd_lev_var:cmd_plt_lev_var"
lev_lat = "gcmprocpy.cmd.cmd_lev_lat:cmd_plt_lev_lat"
lev_lon = "gcmprocpy.cmd.cmd_lev_lon:cmd_plt_lev_lon"
lev_time = "gcmprocpy.cmd.cmd_lev_time:cmd_plt_lev_time"
lat_time = "gcmprocpy.cmd.cmd_lat_time:cmd_plt_lat_time"
gcmprocpy = "gcmprocpy.gui.gcmprocpy:main"

[tool.setuptools.packages.find]
where = ["src"]
