[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gcmprocpy"
version = "1.4.0"
description = "A Python3 post processing tool for TIE-GCM and WACCM-X"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.8"
authors = [
    { name = "Nikhil Rao", email = "nikhilr@ucar.edu" },
]
keywords = ["TIE-GCM", "WACCM-X", "atmospheric-science", "post-processing", "visualization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "cartopy",
    "matplotlib",
    "numpy",
    "xarray",
    "dask",
    "ipython",
    "geomag",
    "netcdf4",
    "ipympl",
    "mplcursors",
    "PyQt5",
    "scipy",
]

[project.urls]
Homepage = "https://github.com/NCAR/gcmprocpy"
Documentation = "https://gcmprocpy.readthedocs.io"

[project.scripts]
lat_lon = "gcmprocpy.cmd.cmd_lat_lon:cmd_plt_lat_lon"
lev_var = "gcmprocpy.cmd.cmd_lev_var:cmd_plt_lev_var"
lev_lat = "gcmprocpy.cmd.cmd_lev_lat:cmd_plt_lev_lat"
lev_lon = "gcmprocpy.cmd.cmd_lev_lon:cmd_plt_lev_lon"
lev_time = "gcmprocpy.cmd.cmd_lev_time:cmd_plt_lev_time"
lat_time = "gcmprocpy.cmd.cmd_lat_time:cmd_plt_lat_time"
lon_time = "gcmprocpy.cmd.cmd_lon_time:cmd_plt_lon_time"
var_time = "gcmprocpy.cmd.cmd_var_time:cmd_plt_var_time"
sat_track = "gcmprocpy.cmd.cmd_sat_track:cmd_plt_sat_track"
gcmprocpy = "gcmprocpy.gui.gcmprocpy:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
